--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,27 @@
-<p>login works!</p>
+<div class="text-center mt-4">
+  <form
+    class="form-signin border rounded"
+    [formGroup]="form"
+    (submit)="onLogin()"
+  >
+    <img class="mb-4" src="assets/cart.png" alt="" width="72" height="72" />
+    <h1 class="h3 mb-3 font-weight-normal">Please Login to your Account</h1>
+    <!-- <p *ngIf="error" class="alert alert-danger">{{ error }}</p> -->
+    <!-- email -->
+    <input
+      type="email"
+      id="email"
+      formControlName="email"
+      class="form-control mb-1"
+      placeholder="Email address"
+      required
+    />
+
+    <button
+      class="mt-3 btn btn-lg btn-light border rounded btn-block"
+      type="submit"
+    >
+      Next -->
+    </button>
+  </form>
+</div>
