--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -31,7 +31,8 @@
       </li>
       <li class="nav-item active">
         <a class="nav-link" routerLink="/cart"
-          >Cart<span class="sr-only">(current)</span></a
+          >Cart <span class="badge badge-primary">{{ numberOfItems }}</span
+          ><span class="sr-only">(current)</span></a
         >
       </li>
       <li class="nav-item active">
@@ -40,7 +41,7 @@
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0);">Logout</a>
+        <a class="nav-link" routerLink="/" (click)="onLogout()">Logout</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/signup">Signup</a>
