--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,1 +1,36 @@
-<p>product-card works!</p>
+<div class="card" style="width: 18rem;">
+  <img
+    src="http://localhost:3006/{{ product.proImages[0].proImage }}"
+    class="card-img-top"
+    alt="..."
+  />
+  <div class="card-body">
+    <h6 class="card-title">{{ product.proName }}</h6>
+    <p class="card-text">
+      <b>$ {{ product.price }}</b>
+    </p>
+  </div>
+  <div class="card-footer p-0">
+    <a
+      *ngIf="!quantity; else cartQuantity"
+      class="btn-block btn btn-block btn-light"
+      (click)="addToCart()"
+      >Add to Cart</a
+    >
+    <ng-template #cartQuantity>
+      <div class="row no-gutters">
+        <div class="col-2">
+          <button (click)="minusQuantity()" class="btn btn-block btn-secondary">
+            -
+          </button>
+        </div>
+        <div class="col text-center">{{ quantity }} in cart</div>
+        <div class="col-2">
+          <button (click)="plusQuantity()" class="btn btn-block btn-secondary">
+            +
+          </button>
+        </div>
+      </div>
+    </ng-template>
+  </div>
+</div>
