--- a/src/app/components/login/login-verify/login-verify.component.html
+++ b/src/app/components/login/login-verify/login-verify.component.html
@@ -1,5 +1,11 @@
 <div class="text-center mt-4">
-  <img class="mb-4" src="assets/cart.png" alt="" width="72" height="72" />
+  <img
+    class="mb-4"
+    src="assets/cartimage.jpg"
+    alt=""
+    width="200"
+    height="200"
+  />
   <h3 class="h3 mb-3 font-weight-normal">Click here to Verify</h3>
   <button
     class="mt-3 btn btn-lg btn-light border rounded btn-block"
