--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,8 +4,15 @@
     [formGroup]="form"
     (submit)="onLogin()"
   >
-    <img class="mb-4" src="assets/cart.png" alt="" width="72" height="72" />
+    <img
+      class="mb-4"
+      src="assets/cartimage.jpg"
+      alt=""
+      width="180"
+      height="180"
+    />
     <h1 class="h3 mb-3 font-weight-normal">Please Login to your Account</h1>
+    <p *ngIf="error" class="alert alert-danger">{{ error }}</p>
     <!-- <p *ngIf="error" class="alert alert-danger">{{ error }}</p> -->
     <!-- email -->
     <input
@@ -16,10 +23,26 @@
       placeholder="Email address"
       required
     />
+    <div
+      class="alert alert-danger"
+      style="padding: 0; text-align: left;"
+      *ngIf="
+        !emailAddress.valid && (emailAddress.touched || emailAddress.dirty)
+      "
+    >
+      <div *ngIf="emailAddress.errors.required">
+        Email required
+      </div>
+      <div *ngIf="emailAddress.errors.email">
+        Enter proper email..!!
+      </div>
+    </div>
 
     <button
       class="mt-3 btn btn-lg btn-light border rounded btn-block"
       type="submit"
+      style="color: chocolate;"
+      [disabled]="!form.valid"
     >
       Next -->
     </button>
