--- a/src/app/components/store/store.component.html
+++ b/src/app/components/store/store.component.html
@@ -1,1 +1,5 @@
-<p>store works!</p>
+<div class="row">
+  <div class="m-1 mx-auto" *ngFor="let product of products">
+    <app-product-card [product]="product"></app-product-card>
+  </div>
+</div>
