--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,1 +1,57 @@
-<p>cart works!</p>
+<div
+  class="container p-3 m-3 mx-auto"
+  *ngIf="cartItems.length != 0; else noItems"
+>
+  <h1 class="display-4">Cart</h1>
+  <hr />
+  <table class="table mx-auto">
+    <thead>
+      <tr>
+        <th>Sno.</th>
+        <th>Image</th>
+        <th>Product</th>
+        <th>Quantity</th>
+        <th>Price</th>
+        <th>Total</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of cartItems; index as i">
+        <td>{{ i + 1 }}</td>
+        <td>
+          <img
+            [src]="
+              'http://localhost:3006/' + item.product.proImages[0].proImage
+            "
+            alt="..."
+            height="80px"
+            class="rounded"
+          />
+        </td>
+        <td>{{ item.product.proName }}</td>
+        <td>{{ item.quantity }}</td>
+        <td>₹{{ item.product.price }}</td>
+        <td>₹{{ item.quantity * item.product.price }}</td>
+      </tr>
+    </tbody>
+
+    <tfoot>
+      <tr>
+        <th colspan="2"></th>
+        <th colspan="3">Total</th>
+        <th>₹ {{ total }}</th>
+      </tr>
+    </tfoot>
+  </table>
+</div>
+
+<ng-template #noItems>
+  <div class="mt-4 pt-4">
+    <div class="jumbotron bg-white border container p-4 m-4 mx-auto">
+      <h1 class="display-4">Cart</h1>
+      <p class="lead">Go to store to add item into the cart</p>
+      <hr class="my-4" />
+      <p>Cart is empty</p>
+    </div>
+  </div>
+</ng-template>
