--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -18,7 +18,8 @@
       >Add to Cart</a
     >
     <ng-template #cartQuantity>
-      <div class="row no-gutters">
+      <app-product-quantity [product]="product"></app-product-quantity>
+      <!-- <div class="row no-gutters">
         <div class="col-2">
           <button (click)="minusQuantity()" class="btn btn-block btn-secondary">
             -
@@ -30,7 +31,7 @@
             +
           </button>
         </div>
-      </div>
+      </div> -->
     </ng-template>
   </div>
 </div>
