--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,36 +14,36 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item active" *ngIf="isLoggedin">
         <a class="nav-link" routerLink=""
           >Store <span class="sr-only">(current)</span></a
         >
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item" *ngIf="isLoggedin">
         <a class="nav-link" routerLink="/dashboard">Dashboard</a>
-      </li>
+      </li> -->
     </ul>
     <ul class="navbar-nav my-2 my-lg-0">
-      <li class="nav-item active">
+      <li class="nav-item active" *ngIf="isLoggedin">
         <a class="nav-link" routerLink="/orders"
           >Orders <span class="sr-only">(current)</span></a
         >
       </li>
-      <li class="nav-item active">
+      <li class="nav-item active" *ngIf="isLoggedin">
         <a class="nav-link" routerLink="/cart"
           >Cart <span class="badge badge-primary">{{ numberOfItems }}</span
           ><span class="sr-only">(current)</span></a
         >
       </li>
-      <li class="nav-item active">
+      <li class="nav-item active" *ngIf="!isLoggedin">
         <a class="nav-link" routerLink="/login"
           >Login<span class="sr-only">(current)</span></a
         >
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="isLoggedin">
         <a class="nav-link" routerLink="/" (click)="onLogout()">Logout</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="!isLoggedin">
         <a class="nav-link" routerLink="/signup">Signup</a>
       </li>
     </ul>
