--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -1,4 +1,5 @@
 <div>
+<div>
   <h6>Category</h6>
   <hr />
   <div
@@ -19,4 +20,21 @@
       >{{ category.catName }}</label
     >
   </div>
+</div>
+<br>
+<br>
+
+<div>
+<h6>Price</h6>
+<hr>
+<select name="min" class="form-control mb-2" id="">
+  <option value="100">Min Price</option>
+</select>
+<select name="max" class="form-control mb-2" id="">
+  <option value="100">Max Price</option>
+</select>
+<div class="mb-2">
+  <button class="btn-block btn btn-sm btn-light border rounded">Filter</button>
+</div>
+</div>
 </div>
