--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-warning">
   <a class="navbar-brand" href="#">E-Shop</a>
   <button
     class="navbar-toggler"
@@ -31,7 +32,9 @@
       </li>
       <li class="nav-item active" *ngIf="isLoggedin">
         <a class="nav-link" routerLink="/cart"
-          >Cart <span class="badge badge-primary">{{ numberOfItems }}</span
+          > <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+          </svg><span class="badge badge-primary">{{ numberOfItems }}</span
           ><span class="sr-only">(current)</span></a
         >
       </li>
@@ -49,3 +52,6 @@
     </ul>
   </div>
 </nav>
+
+
+
