--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -19,7 +19,7 @@
     >
     <ng-template #cartQuantity>
       <app-product-quantity [product]="product"></app-product-quantity> -->
-      <!-- <div class="row no-gutters">
+<!-- <div class="row no-gutters">
         <div class="col-2">
           <button (click)="minusQuantity()" class="btn btn-block btn-secondary">
             -
@@ -33,15 +33,13 @@
         </div>
       </div> -->
 
-    <!-- </ng-template>
+<!-- </ng-template>
   </div>
 </div> -->
 
-
- <div class="card" style="width: 18rem;">
+<div class="card" style="width: 18rem;">
   <img
-  src="http://localhost:3006/{{ product.productImage[0].proImage }}"
-   
+    src="http://localhost:3006/{{ product.productImage[0].proImage }}"
     class="card-img-top"
     alt="..."
   />
@@ -59,4 +57,7 @@
       >Add to Cart</a
     >
     <ng-template #cartQuantity>
-      <app-product-quantity [product]="product"></app-product-quantity> 
+      <app-product-quantity [product]="product"></app-product-quantity>
+    </ng-template>
+  </div>
+</div>
