--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -150,7 +150,7 @@
             </div>
           </div>
 
-          <div class="mb-3">
+          <!-- <div class="mb-3">
             <label for="email">Email</label>
             <input
               type="email"
@@ -161,7 +161,7 @@
             <div class="invalid-feedback">
               Please enter a valid email address for shipping updates.
             </div>
-          </div>
+          </div> -->
 
           <div class="mb-3">
             <label for="address">Address</label>
