--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -70,87 +70,92 @@
 <!-- Check-Out form -->
 
 <ng-template #form>
-  <div class="container">
-    <div class="py-5 text-center">
-      <h2>Checkout form</h2>
-    </div>
-
-    <div class="row">
-      <div class="col-md-5 mx-auto order-md-2 mb-4">
-        <h4 class="d-flex justify-content-between align-items-center mb-3">
-          <span class="text-muted">Your cart</span>
-          <span class="badge badge-secondary badge-pill">{{
-            cartItems.length
-          }}</span>
-        </h4>
-        <ul class="list-group mb-3">
-          <li
-            *ngFor="let item of cartItems"
-            class="list-group-item d-flex justify-content-between lh-condensed"
-          >
-            <div>
-              <h6 class="my-0">
-                <b>{{ item.quantity }}</b> * {{ item.product.proName }}
-              </h6>
-              <small class="text-muted"></small>
-            </div>
-            <span class="text-muted"
-              >₹{{ item.quantity * item.product.price }}</span
-            >
-          </li>
-
-          <li class="list-group-item d-flex justify-content-between">
-            <span>Total (INR)</span>
-            <strong>₹ {{ total }}</strong>
-          </li>
-        </ul>
-
-        <form class="card p-2">
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Promo code" />
-            <div class="input-group-append">
-              <button type="submit" class="btn btn-secondary">Redeem</button>
-            </div>
-          </div>
-        </form>
+  <div>
+    <div class="container">
+      <div class="py-5 text-center">
+        <h2>Checkout form</h2>
       </div>
-      <div class="col-md-7 border-right mx-auto order-md-1">
-        <h4 class="mb-3">Billing address</h4>
-        <form class="needs-validation" novalidate>
-          <div class="row">
-            <div class="col-md-6 mb-3">
-              <label for="firstName">First name</label>
-              <input
-                type="text"
-                name="firstName"
-                class="form-control"
-                id="firstName"
-                placeholder=""
-                value=""
-                required
-              />
-              <div class="invalid-feedback">
-                Valid first name is required.
-              </div>
-            </div>
-            <div class="col-md-6 mb-3">
-              <label for="lastName">Last name</label>
-              <input
-                type="text"
-                name="lastName"
-                class="form-control"
-                id="lastName"
-                placeholder=""
-                value=""
-                required
-              />
-              <div class="invalid-feedback">
-                Valid last name is required.
-              </div>
-            </div>
-          </div>
 
-          <!-- <div class="mb-3">
+      <div class="row">
+        <div class="col-md-5 mx-auto order-md-2 mb-4">
+          <h4 class="d-flex justify-content-between align-items-center mb-3">
+            <span class="text-muted">Your cart</span>
+            <span class="badge badge-secondary badge-pill">{{
+              cartItems.length
+            }}</span>
+          </h4>
+          <ul class="list-group mb-3">
+            <li
+              *ngFor="let item of cartItems"
+              class="list-group-item d-flex justify-content-between lh-condensed"
+            >
+              <div>
+                <h6 class="my-0">
+                  <b>{{ item.quantity }}</b> * {{ item.product.proName }}
+                </h6>
+                <small class="text-muted"></small>
+              </div>
+              <span class="text-muted"
+                >₹{{ item.quantity * item.product.price }}</span
+              >
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between">
+              <span>Total (INR)</span>
+              <strong>₹ {{ total }}</strong>
+            </li>
+          </ul>
+
+          <form class="card p-2">
+            <div class="input-group">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Promo code"
+              />
+              <div class="input-group-append">
+                <button type="submit" class="btn btn-secondary">
+                  Redeem
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="col-md-7 border-right mx-auto order-md-1">
+          <h4 class="mb-3">Billing address</h4>
+          <form [formGroup]="forms" (submit)="checkOut()">
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <label for="firstName">First name</label>
+                <input
+                  type="text"
+                  id="firstName"
+                  formControlName="firstName"
+                  class="form-control"
+                  placeholder="firstName"
+                  required
+                />
+                <div class="invalid-feedback">
+                  Valid first name is required.
+                </div>
+              </div>
+              <div class="col-md-6 mb-3">
+                <label for="lastName">Last name</label>
+                <input
+                  type="text"
+                  id="lastName"
+                  formControlName="lastName"
+                  class="form-control"
+                  placeholder="lastName"
+                  required
+                />
+                <div class="invalid-feedback">
+                  Valid last name is required.
+                </div>
+              </div>
+            </div>
+
+            <!-- <div class="mb-3">
             <label for="email">Email</label>
             <input
               type="email"
@@ -163,86 +168,85 @@
             </div>
           </div> -->
 
-          <div class="mb-3">
-            <label for="address">Address</label>
-            <input
-              type="text"
-              name="address"
-              class="form-control"
-              id="address"
-              placeholder="1234 Main St"
-              required
-            />
-            <div class="invalid-feedback">
-              Please enter your shipping address.
-            </div>
-          </div>
-
-          <hr class="mb-4" />
-          <h4 class="mb-3">Payment</h4>
-
-          <div class="d-block my-3">
-            <div class="custom-control custom-radio">
+            <div class="mb-3">
+              <label for="address">Address</label>
               <input
-                id="credit"
-                name="paymentMethod"
-                type="radio"
-                disabled
-                class="custom-control-input"
+                type="text"
+                id="address"
+                formControlName="address"
+                class="form-control"
+                placeholder="1234 Main St"
                 required
               />
-              <label class="custom-control-label" for="credit"
-                >Credit card</label
-              >
-            </div>
-            <div class="custom-control custom-radio">
-              <input
-                id="debit"
-                name="paymentMethod"
-                type="radio"
-                disabled
-                class="custom-control-input"
-                required
-              />
-              <label class="custom-control-label" for="debit">Debit card</label>
-            </div>
-            <div class="custom-control custom-radio">
-              <input
-                id="paypal"
-                name="paymentMethod"
-                type="radio"
-                disabled
-                class="custom-control-input"
-                required
-              />
-              <label class="custom-control-label" for="paypal">PayPal</label>
+              <div class="invalid-feedback">
+                Please enter your shipping address.
+              </div>
             </div>
 
-            <div class="custom-control custom-radio">
-              <input
-                id="paypal"
-                name="paymentMethod"
-                type="radio"
-                checked
-                class="custom-control-input"
-                required
-              />
-              <label class="custom-control-label" for="paypal">COD</label>
-            </div>
-          </div>
+            <hr class="mb-4" />
+            <h4 class="mb-3">Payment</h4>
 
-          <hr class="mb-4" />
-          <button
-            (click)="checkOut()"
-            class="btn btn-outline-primary btn btn-block"
-            type="submit"
-          >
-            Continue to checkout
-          </button>
-        </form>
+            <div class="d-block my-3">
+              <div class="custom-control custom-radio">
+                <input
+                  id="credit"
+                  name="paymentMethod"
+                  type="radio"
+                  disabled
+                  class="custom-control-input"
+                  required
+                />
+                <label class="custom-control-label" for="credit"
+                  >Credit card</label
+                >
+              </div>
+              <div class="custom-control custom-radio">
+                <input
+                  id="debit"
+                  name="paymentMethod"
+                  type="radio"
+                  disabled
+                  class="custom-control-input"
+                  required
+                />
+                <label class="custom-control-label" for="debit"
+                  >Debit card</label
+                >
+              </div>
+              <div class="custom-control custom-radio">
+                <input
+                  id="paypal"
+                  name="paymentMethod"
+                  type="radio"
+                  disabled
+                  class="custom-control-input"
+                  required
+                />
+                <label class="custom-control-label" for="paypal">PayPal</label>
+              </div>
+
+              <div class="custom-control custom-radio">
+                <input
+                  id="paypal"
+                  name="paymentMethod"
+                  type="radio"
+                  checked
+                  class="custom-control-input"
+                  required
+                />
+                <label class="custom-control-label" for="paypal">COD</label>
+              </div>
+            </div>
+
+            <hr class="mb-4" />
+            <button class="btn btn-outline-primary btn btn-block" type="submit">
+              Continue to checkout
+            </button>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
 
-  <hr />
+    <hr />
+  </div>
 </ng-template>
