--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -37,7 +37,7 @@
   </div>
 </div> -->
 
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 18rem; height: 25rem;">
   <img
     src="http://localhost:3006/{{ product.productImage[0].proImage }}"
     class="card-img-top"
