--- a/src/app/components/user-orders/user-orders.component.html
+++ b/src/app/components/user-orders/user-orders.component.html
@@ -1,1 +1,40 @@
-<p>user-orders works!</p>
+<div class="container-fluid p-3">
+  <div class="m-4">
+    <h1 class="display-4">Orders</h1>
+    <hr />
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Sno.</th>
+          <th>Product</th>
+          <th>Date</th>
+          <th>Address</th>
+          <th>Price</th>
+          <th>Quantity</th>
+          <th>Total Price</th>
+          <th>Order status</th>
+        </tr>
+      </thead>
+
+      <tbody *ngFor="let order of orders; index as i">
+        <tr>
+          <td>{{ i + 1 }}</td>
+          <td>{{ order.product.proName }}</td>
+          <td>{{ order.createdAt | date }}</td>
+          <td>{{ order.address }}</td>
+          <td>{{ order.product.price }}</td>
+          <td>{{ order.quantity }}</td>
+          <td>{{ order.product.price * order.quantity }}</td>
+          <td>
+            <span
+              class="badge"
+              [class.badge-warning]="order.status == 'pending'"
+              [class.badge-success]="order.status == 'completed'"
+              >{{ order.status }}</span
+            >
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
