--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -135,9 +135,26 @@
                   placeholder="firstName"
                   required
                 />
-                <div class="invalid-feedback">
-                  Valid first name is required.
+
+                <div
+                  class="alert alert-danger"
+                  style="padding: 0; text-align: left;"
+                  *ngIf="!fName.valid && (fName.touched || fName.dirty)"
+                >
+                  <div *ngIf="fName.errors.required">
+                    First name is required
+                  </div>
+                  <div *ngIf="fName.errors.minlength">
+                    First Name must be atleast 3 characters long
+                  </div>
+                  <div *ngIf="fName.errors.pattern">
+                    First Name pattern not valid
+                  </div>
                 </div>
+
+                <!-- <div class="invalid-feedback">
+                  Valid first name is required.
+                </div> -->
               </div>
               <div class="col-md-6 mb-3">
                 <label for="lastName">Last name</label>
@@ -149,9 +166,26 @@
                   placeholder="lastName"
                   required
                 />
-                <div class="invalid-feedback">
-                  Valid last name is required.
+
+                <div
+                  class="alert alert-danger"
+                  style="padding: 0; text-align: left;"
+                  *ngIf="!lName.valid && (lName.touched || lName.dirty)"
+                >
+                  <div *ngIf="lName.errors.required">
+                    Last name is required
+                  </div>
+                  <div *ngIf="lName.errors.minlength">
+                    Last Name must be atleast 3 characters long
+                  </div>
+                  <div *ngIf="lName.errors.pattern">
+                    Last Name pattern not valid
+                  </div>
                 </div>
+
+                <!-- <div class="invalid-feedback">
+                  Valid last name is required.
+                </div> -->
               </div>
             </div>
 
@@ -178,9 +212,23 @@
                 placeholder="1234 Main St"
                 required
               />
-              <div class="invalid-feedback">
-                Please enter your shipping address.
+
+              <div
+                class="alert alert-danger"
+                style="padding: 0; text-align: left;"
+                *ngIf="!Address.valid && (Address.touched || Address.dirty)"
+              >
+                <div *ngIf="Address.errors.required">
+                  Address is required
+                </div>
+                <div *ngIf="Address.errors.minlength">
+                  Address must be atleast 5 characters long
+                </div>
+            
               </div>
+              <!-- <div class="invalid-feedback">
+                Please enter your shipping address.
+              </div> -->
             </div>
 
             <hr class="mb-4" />
@@ -239,7 +287,11 @@
             </div>
 
             <hr class="mb-4" />
-            <button class="btn btn-outline-primary btn btn-block" type="submit">
+            <button
+              class="btn btn-outline-primary btn btn-block"
+              type="submit"
+              [disabled]="!forms.valid"
+            >
               Continue to checkout
             </button>
           </form>
